<resources
    xmlns:tools="http://schemas.android.com/tools"
>
    <string name="puzzle_select">Select a puzzle:</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="reveal_puzzle">Reveal Entire Puzzle</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="elapsed_time">Elapsed Time: %1$s</string>
    <string name="preview">Preview</string>
    <string name="general_clue_notes">Free-form notes about clue</string>
    <string name="general_puzzle_notes">Free-form notes about puzzle</string>
    <string name="unknown_hint">(No explicit clue)</string>
    <string name="play_activity_title">%1$s - %2$s -> %3$s</string>
    <string name="download">Download</string>
    <string name="puzzles_downloading">Downloading Puzzles</string>
    <string name="puzzles_downloading_from">Downloading Puzzles from %s</string>
    <string name="puzzles_downloaded_all">New Puzzles Downloaded</string>
    <string name="puzzles_downloaded_some">Some Puzzles Downloaded and Some Failed</string>
    <string name="puzzles_downloaded_none">Puzzle Downloads Failed</string>
    <string name="puzzle_downloaded">Downloaded %1$s</string>
    <string name="puzzle_download_failed">Download failed from %1$s</string>
    <string name="puzzle_download_no_connection">No puzzles downloaded due to no network connection.</string>
    <string name="import_fallback_source">Import</string>
    <string name="imports_title">Puzzle Import(s)</string>
    <string name="import_success">Puzzle(s) imported</string>
    <string name="import_failure">Some imports failed</string>
    <string name="import_success_long">The selected puzzles were imported into Forkyz.</string>
    <string name="import_failure_long">Some puzzles were not imported into Forkyz.</string>
    <string name="perm_read_desc">Requested on older devices to read saved puzzles.</string>
    <string name="perm_write_desc">Requested on older devices to store puzzles.</string>
    <string name="perm_internet_desc">Required to download puzzles from the internet.</string>
    <string name="perm_access_network_state_desc">Required to limit background download when on mobile data or wifi.</string>
    <string name="perm_boot_desc">Required to (optionally) allow periodic background download of puzzles.</string>
    <string name="vibrate_desc">Required for haptic feedback on built-in keyboard.</string>
    <string name="wake_lock_desc">Used only for automatic download on older Android version.</string>
    <string name="notification_permission_desc">Used for puzzle download notifications (when not disabled in settings).</string>
    <string name="delete">Delete</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Un-Archive</string>
    <string name="add_puzzle">Add Puzzle</string>
    <string name="online_sources">Online Sources</string>
    <string name="online_sources_url">https://yourealwaysbe.github.io/forkyz</string>
    <string name="import_puzzle">Import Puzzle</string>
    <string name="download_puzzles">Download Puzzles</string>
    <string name="back">Back</string>
    <string name="no_puzzles_download_or_configure_storage">No puzzles found. Download puzzles with the button below or configure a storage directory in settings.</string>
    <string name="no_puzzles">No puzzles found.</string>
    <string name="unable_to_read_file">Unable to read file %1$s</string>
    <string name="download_notification_channel_name">Downloads</string>
    <string name="download_notification_channel_desc">Notifications about downloaded puzzles</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="internal_storage_description">Currently using internal storage. Puzzles will be deleted when Forkyz is uninstalled.</string>
    <string name="allow_permissions">Allow Permissions</string>
    <string name="please_allow_storage">Please allow writing to storage when prompted. Forkyz needs this permission to store downloaded crossword files and cannot work without it.</string>
    <string name="title_view_archives">Archives</string>
    <string name="title_view_crosswords">Crosswords</string>
    <string name="puzzle_caption_with_author">%1$s by %2$s</string>
    <string name="download_but_no_active_network">Please enable a network connection before downloading.</string>
    <string name="downloader_available_soon">%1$s (in &lt;1hr)</string>
    <plurals name="downloader_available_hours">
        <item quantity="one">%1$s (in ~%2$dhr)</item>
        <item quantity="other">%1$s (in ~%2$dhrs)</item>
    </plurals>
    <string name="downloader_available_future">%1$s (not yet available)</string>
    <string name="downloader_not_available">%1$s (not available)</string>
    <string name="notifications_request_rationale">Download notifications enabled. Allow or disable in download settings.</string>
    <string name="disable_notifications">Disable Notifications?</string>
    <string name="notifications_denied_msg">Download notifications are denied in Android settings. Would you like to disable download notifications in the Forkyz download settings? If you would like to keep notifications, please enable notifications for Forkyz in the Android settings.</string>
    <string name="disable_notifications_button">Disable</string>
    <string name="android_app_settings_button">Settings</string>
    <string name="new_version_title">Welcome to Forkyz Version %1$s</string>
    <string name="new_version_message">A list of changes is available in the release notes in settings.</string>
    <string name="view_release_notes">View Changes</string>
    <string name="open_clue_list">Open clue list</string>
    <string name="toggle_clue_tabs">Show/hide clues under grid</string>
    <string name="open_clue_notes">Open clue notes page</string>
    <string name="select_clue">Select clue</string>
    <string name="current_word">Current word</string>
    <string name="clue_word">The grid word for the clue</string>
    <string name="clue_hint">Clue Hint</string>
    <string name="edit_clue">Edit Clue</string>
    <string name="anagram_source_lab">Anagram remaining letters</string>
    <string name="anagram_solution_lab">Anagram solution</string>
    <string name="board_lab">Board</string>
    <string name="scratch_lab">Scratch</string>
    <string name="notes_lab">Notes</string>
    <string name="copy_conflict">Copy Conflict</string>
    <string name="transfer_overwrite_warning">Transferring the response conflicts with existing entries. Overwrite anyway?</string>
    <string name="flagClue">Flag clue</string>
    <string name="player_notes">Puzzle Notes</string>
    <string name="transfer_board_to_scratch_or_anagram">Transfer board contents to scratch or anagram</string>
    <string name="transfer_scratch_to_notes">Transfer scratch contents to free notes</string>
    <string name="transfer_scratch_to_board">Transfer scratch contents to board</string>
    <string name="shuffle_anagram_source">Shuffle anagram source letters</string>
    <string name="transfer_anagram_solution_to_board">Transfer anagram solution to board</string>
    <string name="clue_format_short_no_dir">%1$s. %2$s</string>
    <string name="clue_format_short_no_dir_with_count">%1$s. %2$s [%3$d]</string>
    <string name="clue_format_short">%1$s%2$s. %3$s</string>
    <string name="clue_format_short_with_count">%1$s%2$s. %3$s [%4$d]</string>
    <string name="clue_format_long">(%1$s) %2$s. %3$s</string>
    <string name="clue_format_long_with_count">(%1$s) %2$s. %3$s [%4$d]</string>
    <string name="clue_format_long_no_num">(%1$s) %2$s</string>
    <string name="clue_format_long_no_num_with_count">(%1$s) %2$s [%3$d]</string>
    <string name="clue_format_short_no_num">%1$s. %2$s</string>
    <string name="clue_format_short_no_num_with_count">%1$s. %2$s [%3$d]</string>
    <string name="clue_format_short_no_num_no_dir">%1$s</string>
    <string name="clue_format_short_no_num_no_dir_with_count">%1$s [%2$d]</string>
    <string name="tap_to_show_full_notes_no_text">(Tap to show full notes.)</string>
    <string name="tap_to_hide_full_notes_no_text">(Tap to hide full notes.)</string>
    <string name="tap_to_show_full_notes_with_text">%1$s&lt;br&gt;(Tap to show full notes.)</string>
    <string name="tap_to_hide_full_notes_with_text">%1$s&lt;br&gt;(Tap to hide full notes.)</string>
    <string name="introduction">Introduction</string>
    <string name="notes">Notes</string>
    <string name="completed">Completed</string>
    <string name="storage_location">Storage Location</string>
    <string name="storage_location_desc">Configure where Forkyz stores/finds its files. Restart app after change.</string>
    <string name="internal_storage">App Internal Storage</string>
    <string name="external_storage_saf">External directory</string>
    <string name="external_storage_saf_current_uri">(Current: %1$s)</string>
    <string name="external_storage_saf_none_selected">no directory selected</string>
    <string name="external_storage_legacy">External SD crosswords directory</string>
    <string name="storage_changed_please_restart">Storage location changed. Please restart Forkyz.</string>
    <string name="failed_to_initialise_saf">Could not initialise external directory.</string>
    <string name="storage_problem_falling_back_internal">Error accessing configured storage, falling back to internal.</string>
    <string name="storage_full_warning">Warning, storage is low on space. The app may not function correctly.</string>
    <string name="display_settings">Display Settings</string>
    <string name="puzzle_title">Title of Puzzle</string>
    <string name="by_author">By Author</string>
    <string name="copyright_info">Copyright Info</string>
    <string name="elapsed_time_labelled_dummy">Elapsed Time: X:XX</string>
    <string name="puzzle_intro">Puzzle introduction.</string>
    <string name="puzzle_notes">Puzzle notes.</string>
    <string name="puzzle_completed">Puzzle notes.</string>
    <string name="completed_in">Completed In</string>
    <string name="elapsed_time_dummy">XX:XX:XX</string>
    <string name="total_clues">Total Clues</string>
    <string name="dummy_xx">XX</string>
    <string name="total_boxes">Total Boxes</string>
    <string name="hinted_boxes">Hinted Boxes</string>
    <string name="dummy_xx_w_pcnt">XX (XX%)</string>
    <string name="voice_with_volume">Volume down activates voice</string>
    <string name="voice_with_volume_desc">Use the volume down key to activate voice command input during play.</string>
    <string name="voice_with_button">Show button to activate voice</string>
    <string name="voice_with_button_desc">Add an on-screen button to activate voice command input.</string>
    <string name="about_voice_commands">About Voice Commands</string>
    <string name="announce_clue_button">Show button to announce clue</string>
    <string name="announce_clue_button_desc">Add an on-screen button to announce current clue and word contents. Uses accessibility service if running.</string>
    <string name="voice_command">Voice Command</string>
    <string name="announce_clue_label">Announce Clue</string>
    <string name="announce_clue_equals">Announce clue with equals key</string>
    <string name="announce_clue_equals_desc">Press equals key to announce current clue and word.</string>
    <string name="announce_clue_always">Always announce clues</string>
    <string name="announce_clue_always_desc">Always announce clues on change, not just when an accessibility service is active.</string>
    <string name="announce_box_always">Always announce boxes</string>
    <string name="announce_box_always_desc">Always announce box contents on change, not just when an accessibility service is active.</string>
</resources>