<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout
        android:id="@+id/stats_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="?dialogPreferredPadding"
    >
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed_in"
                android:textSize="16sp"
                android:padding="7dp"
            />

            <TextView
                android:id="@+id/elapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elapsed_time_dummy"
                android:textSize="16sp"
                android:padding="7dp"
            />
        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_clues"
                android:textSize="16sp"
                android:padding="7dp"
            />

            <TextView
                android:id="@+id/totalClues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_xx"
                android:textSize="16sp"
                android:padding="7dp"
            />
        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_boxes"
                android:textSize="16sp"
                android:padding="7dp"
            />
            <TextView
                android:id="@+id/totalBoxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_xx"
                android:textSize="16sp"
                android:padding="7dp"
            />
        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hinted_boxes"
                android:textSize="16sp"
                android:padding="7dp"
            />
            <TextView
                android:id="@+id/cheatedBoxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_xx_w_pcnt"
                android:textSize="16sp"
                android:padding="7dp"
            />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/puzzle_completed_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/puzzle_completed"
        android:lineSpacingMultiplier="1.2"
        android:paddingBottom="?dialogPreferredPadding"
    />
</merge>
