<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
>
    <app.crossword.yourealwaysbe.view.BoardWordEditView
        android:id="@+id/miniboard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:contentDescription="@string/current_word"
        android:layout_marginTop="0sp"
        android:layout_marginBottom="4sp"
    />
    <app.crossword.yourealwaysbe.view.ClueTabs
        android:id="@+id/clueListClueTabs"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
    />
    <LinearLayout
        android:id="@+id/voiceButtonContainer"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="5dp"
    >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/voiceButton"
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            app:icon="@drawable/ic_voice"
            app:iconPadding="0dp"
            app:iconGravity="textStart"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/voice_command"
        />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/announceClueButton"
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            app:icon="@drawable/ic_announce"
            app:iconPadding="0dp"
            app:iconGravity="textStart"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/announce_clue_label"
        />
    </LinearLayout>
    <app.crossword.yourealwaysbe.view.ForkyzKeyboard
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />
</LinearLayout>
